fix: fix locale path
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2701>

--- a/front/src/locales/bn_BD.json
+++ b/front/src/locales/bn_BD.json
@@ -229,29 +229,6 @@
         "unsupported": ""
       }
     },
-    "SetInstanceModal": {
-      "button": {
-        "cancel": "",
-        "submit": ""
-      },
-      "header": {
-        "chooseInstance": "",
-        "failure": "",
-        "suggestions": ""
-      },
-      "help": {
-        "notFunkwhaleServer": "",
-        "selectPod": "",
-        "serverDown": ""
-      },
-      "label": {
-        "url": ""
-      },
-      "message": {
-        "currentConnection": "",
-        "newUrl": ""
-      }
-    },
     "ShortcutsModal": {
       "button": {
         "close": ""
@@ -4610,6 +4587,29 @@
           }
         },
         "title": ""
+      }
+    },
+    "ChooseInstance": {
+      "button": {
+        "cancel": "",
+        "submit": ""
+      },
+      "header": {
+        "chooseInstance": "",
+        "failure": "",
+        "suggestions": ""
+      },
+      "help": {
+        "notFunkwhaleServer": "",
+        "selectPod": "",
+        "serverDown": ""
+      },
+      "label": {
+        "url": ""
+      },
+      "message": {
+        "currentConnection": "",
+        "newUrl": ""
       }
     }
   }
