--- a/front/src/locales/cs.json
+++ b/front/src/locales/cs.json
@@ -229,29 +229,6 @@
         "unsupported": "Tento druh objektu není prozatím podporován"
       }
     },
-    "SetInstanceModal": {
-      "button": {
-        "cancel": "Zrušit",
-        "submit": "Odeslat"
-      },
-      "header": {
-        "chooseInstance": "Zvolte si instanci",
-        "failure": "Na zadanou adresu URL se nelze připojit",
-        "suggestions": "Navržené volby"
-      },
-      "help": {
-        "notFunkwhaleServer": "Na zadané adrese neběží žádný Funkwhale server",
-        "selectPod": "Pro pokračování prosím zvolte Funkwhale instanci, ke které se chcete připojit. Zadejte adresu přímo, nebo vyberte jednu z nabízených možností.",
-        "serverDown": "Server je možná nedostupný"
-      },
-      "label": {
-        "url": "URL instance"
-      },
-      "message": {
-        "currentConnection": "Aktuálně jste připojeni k { 0 }. Když budete pokračovat, budete odpojeni od vaší aktuální instance a vaše lokální data budou vymazána.",
-        "newUrl": "Právě používáte Funkwhale instanci na adrese { url }"
-      }
-    },
     "ShortcutsModal": {
       "button": {
         "close": "Zavřít"
@@ -4610,6 +4587,29 @@
           }
         },
         "title": "Rádio"
+      }
+    },
+    "ChooseInstance": {
+      "button": {
+        "cancel": "Zrušit",
+        "submit": "Odeslat"
+      },
+      "header": {
+        "chooseInstance": "Zvolte si instanci",
+        "failure": "Na zadanou adresu URL se nelze připojit",
+        "suggestions": "Navržené volby"
+      },
+      "help": {
+        "notFunkwhaleServer": "Na zadané adrese neběží žádný Funkwhale server",
+        "selectPod": "Pro pokračování prosím zvolte Funkwhale instanci, ke které se chcete připojit. Zadejte adresu přímo, nebo vyberte jednu z nabízených možností.",
+        "serverDown": "Server je možná nedostupný"
+      },
+      "label": {
+        "url": "URL instance"
+      },
+      "message": {
+        "currentConnection": "Aktuálně jste připojeni k { 0 }. Když budete pokračovat, budete odpojeni od vaší aktuální instance a vaše lokální data budou vymazána.",
+        "newUrl": "Právě používáte Funkwhale instanci na adrese { url }"
       }
     }
   }
