--- a/front/src/locales/en_GB.json
+++ b/front/src/locales/en_GB.json
@@ -229,29 +229,6 @@
         "unsupported": "This kind of object isn't supported yet"
       }
     },
-    "SetInstanceModal": {
-      "button": {
-        "cancel": "Cancel",
-        "submit": "Submit"
-      },
-      "header": {
-        "chooseInstance": "Choose your instance",
-        "failure": "It is not possible to connect to the given URL",
-        "suggestions": "Suggested choices"
-      },
-      "help": {
-        "notFunkwhaleServer": "The given address is not a Funkwhale server",
-        "selectPod": "To continue, please select the Funkwhale instance you want to connect to. Enter the address directly, or select one of the suggested choices.",
-        "serverDown": "The server might be down"
-      },
-      "label": {
-        "url": "Instance URL"
-      },
-      "message": {
-        "currentConnection": "You are currently connected to { 0 }. If you continue, you will be disconnected from your current instance and all your local data will be deleted.",
-        "newUrl": "You are now using the Funkwhale instance at {url}"
-      }
-    },
     "ShortcutsModal": {
       "button": {
         "close": "Close"
@@ -4610,6 +4587,29 @@
           }
         },
         "title": "Radio"
+      }
+    },
+    "ChooseInstance": {
+      "button": {
+        "cancel": "Cancel",
+        "submit": "Submit"
+      },
+      "header": {
+        "chooseInstance": "Choose your instance",
+        "failure": "It is not possible to connect to the given URL",
+        "suggestions": "Suggested choices"
+      },
+      "help": {
+        "notFunkwhaleServer": "The given address is not a Funkwhale server",
+        "selectPod": "To continue, please select the Funkwhale instance you want to connect to. Enter the address directly, or select one of the suggested choices.",
+        "serverDown": "The server might be down"
+      },
+      "label": {
+        "url": "Instance URL"
+      },
+      "message": {
+        "currentConnection": "You are currently connected to { 0 }. If you continue, you will be disconnected from your current instance and all your local data will be deleted.",
+        "newUrl": "You are now using the Funkwhale instance at {url}"
       }
     }
   }
