--- a/front/src/locales/hu.json
+++ b/front/src/locales/hu.json
@@ -949,7 +949,8 @@
           "create": "Hozzáférés a lejátszási listákhoz"
         }
       }
-    }
+    },
+    "ChooseInstance": null
   },
   "init": {
     "serviceWorker": {
