--- a/front/src/locales/ru.json
+++ b/front/src/locales/ru.json
@@ -229,29 +229,6 @@
         "unsupported": "Этот вид объекта пока не поддерживается"
       }
     },
-    "SetInstanceModal": {
-      "button": {
-        "cancel": "Отмена",
-        "submit": "Отправить"
-      },
-      "header": {
-        "chooseInstance": "Выберите свой узел",
-        "failure": "Невозможно соединиться с указанным URL",
-        "suggestions": "Предложенные изменения"
-      },
-      "help": {
-        "notFunkwhaleServer": "Заданный адрес не является сервером Funkwhale",
-        "selectPod": "Чтобы продолжить, пожалуйста выберите узел Funkwhale, к которому Вы соединяетесь. Введите сам адрес или выберите один из предложенных вариантов.",
-        "serverDown": "Сервер может быть недоступен"
-      },
-      "label": {
-        "url": "URL узла"
-      },
-      "message": {
-        "currentConnection": "Сейчас вы подключены к { 0 }. Если вы продолжите, вы будете отключены от вашего текущего узла и все ваши локальные данные будут удалены.",
-        "newUrl": "Вы используете узел Funkwhale на { url }"
-      }
-    },
     "ShortcutsModal": {
       "button": {
         "close": "Закрыть"
@@ -4610,6 +4587,29 @@
           }
         },
         "title": "Радио"
+      }
+    },
+    "ChooseInstance": {
+      "button": {
+        "cancel": "Отмена",
+        "submit": "Отправить"
+      },
+      "header": {
+        "chooseInstance": "Выберите свой узел",
+        "failure": "Невозможно соединиться с указанным URL",
+        "suggestions": "Предложенные изменения"
+      },
+      "help": {
+        "notFunkwhaleServer": "Заданный адрес не является сервером Funkwhale",
+        "selectPod": "Чтобы продолжить, пожалуйста выберите узел Funkwhale, к которому Вы соединяетесь. Введите сам адрес или выберите один из предложенных вариантов.",
+        "serverDown": "Сервер может быть недоступен"
+      },
+      "label": {
+        "url": "URL узла"
+      },
+      "message": {
+        "currentConnection": "Сейчас вы подключены к { 0 }. Если вы продолжите, вы будете отключены от вашего текущего узла и все ваши локальные данные будут удалены.",
+        "newUrl": "Вы используете узел Funkwhale на { url }"
       }
     }
   }
