--- a/front/src/locales/fa_IR.json
+++ b/front/src/locales/fa_IR.json
@@ -354,6 +354,7 @@
         "messages": "پیام های شما",
         "notifications": "اعلان های شما"
       }
-    }
+    },
+    "ChooseInstance": null
   }
 }
