fix: remove unused locale key

--- a/front/src/locales/ja_JP.json
+++ b/front/src/locales/ja_JP.json
@@ -4334,9 +4334,7 @@
       }
     },
     "ChooseInstance": {
-      "button": {
-        "cancel": "キャンセル"
-      },
+      "button": {},
       "header": {
         "chooseInstance": "インスタンスを選んでください",
         "failure": "入力されたURLにアクセスできません",
